# agent-editor

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  go.work  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: pull_request_template.md
app/: i18n.tsx  ipc-bridge.ts  main.tsx  routeTree.gen.d.ts  routeTree.gen.ts
app/routes/: __root.tsx  doc.$id.tsx  graph.$id.tsx  index.tsx  plugins.tsx  repo.tsx  search.tsx  settings.providers.tsx
app/types/: router-shims.d.ts  shims.d.ts  tanstack-router-globals.d.ts
cli/: go.mod  main.go
cli/cmd/: ai.go  completion.go  config.go  doc.go  export.go  export_test.go  fts.go  graph.go  import.go  plugin.go  repo.go  root.go  serve.go  settings.go  version.go
docs/: OPEN_QUESTIONS.md  README.md
docs/design/: DESIGN_PHILOSOPHY.md
docs/guides/: A11Y.md  A11Y_AUDIT.md  ARCHITECTURE.md  BUILD.md  CI.md  CLI.md  CODEMAP.md  CONFIG.md  DEVELOPMENT.md  ELECTRIC.md  FEATURE_HOWTO.md  PACKAGING.md  (+10 more)
scripts/: bench-fts.sh  bench-scan.sh  ci-bench-assert.mjs  cli-smoke.sh  dev-check.mjs  tmux-bench.sh  tmux-bootstrap.sh  tmux-ci-smoke.sh  tmux-dev.sh  tmux-e2e.sh  tmux-plugin-db-demo.sh  tmux-plugin-demo.sh  tmux-plugin-log-smoke.sh  tmux-plugin-net-demo.sh  tmux-plugin-rpc-demo.sh  tmux-provider-demo.sh  tmux-smoke.sh  tmux-tauri-build.sh  tmux-vibe-notify.sh  vibe-notify.sh
src-tauri/: Cargo.toml  schema.sql  tauri.conf.json
src-tauri/.dev/: agent-editor.db-shm  agent-editor.db-wal
src-tauri/src/: api.rs  commands.rs  db.rs  main.rs  secrets.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/commands/: ai.rs  anchor.rs  doc.rs  export.rs  graph.rs  mod.rs  plugin.rs  repo.rs  scan.rs  search.rs  settings.rs
src-tauri/src/graph/: mod.rs
src-tauri/src/plugins/: mod.rs
src-tauri/src/scan/: mod.rs
test-results/: .last-run.json
(+54 files in other folders)
