[package]
name = "agent-editor"
version = "0.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled", "serde_json"] }
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
parking_lot = "0.12"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = "0.7"
hyper = { version = "1", features = ["server"] }
ignore = "0.4"
walkdir = "2.5"
blake3 = "1.5"
notify = "6.1"

[build-dependencies]
tauri-build = { version = "2" }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
