[package]
name = "agent-editor"
version = "0.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled", "serde_json", "backup"] }
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
parking_lot = "0.12"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = "0.7"
hyper = { version = "1", features = ["server"] }
ignore = "0.4"
walkdir = "2.5"
blake3 = "1.5"
notify = "6.1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
keyring = { version = "2", optional = true }
tar = "0.4"
base64 = "0.21"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[[bin]]
name = "rpc_sidecar"
path = "src/bin/rpc_sidecar.rs"
